# ailab

./: .gitignore  README.md  infer.sh  pyproject.toml  requirements.txt  train.sh
configs/: example.py  example.yaml
example/: config.py  example_config.py  example_train.py  train.py  train.sh
models/__base__/: resnet.py
src/: __init__.py  builder.py  hooks.py  hooks_extra.py  register.py  registry.py  workflow.py
src/ailab/: __init__.py  builder.py  hooks.py  hooks_extra.py  registry.py  workflow.py
src/ailab/datasets/base/: __init__.py  _base.py  _transform.py  cv_base_dataset.py  cv_mae.py  yolo.py
src/ailab/datasets/utils/: __init__.py  images_utils.py  load_json_annotations.py  load_txt_annotations.py  split_dataset.py
src/ailab/losses/: __init__.py  _base.py  bisenetv2.py  yolo.py
src/ailab/metrics/: _base.py  accuracy.py
src/ailab/models/base/: __init__.py  bisenetv2.py  mae.py  prototype_learning.py  resnet.py  transformer.py
src/ailab/models/base/yolo/: __init__.py  v5.py
src/ailab/schedulers/: _base.py
src/ailab/tools/: infer.py  train.py
src/ailab/utils/: __init__.py  call_fn.py  checkpoint.py  dist_utils.py  inference.py  logging.py  lr_scheduler.py  parse_args.py
src/datasets/base/: cv_base_dataset.py
src/datasets/utils/: __init__.py
src/metrics/: _base.py  accuracy.py
src/utils/: __init__.py  dist_utils.py  inference.py  lr_scheduler.py
tools/: infer.py  train.py
